--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "prismjs": "^1.22.0",
     "uuid": "^8.3.1",
     "vue": "^2.6.11",
+    "vue-prism-editor": "^1.2.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
