--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-prism-editor": "^1.2.2",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
+    "vuejs-dialog": "^1.4.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
