--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@panter/vue-i18next": "^0.15.2",
     "core-js": "^3.6.5",
+    "i18next": "^19.8.4",
     "prismjs": "^1.22.0",
     "uuid": "^8.3.1",
     "vue": "^2.6.11",
